# ra-aid-start

./: .gitignore  PENDENCIAS.md  PLAN.md  README.md  WebGUI.md  install.bat  publish_testpypi.ps1  pyproject.toml  requirements.txt  setup.py  shrimp-rules.md  tasks.json  uninstall.bat
.opencode/: opencode.db-shm  opencode.db-wal
.ra-aid/: pk.db
.roo/: mcp.json
docs/: USER_GUIDE.md
ra_aid_start/: __init__.py  __main__.py  menus.py  preset_manager.py
ra_aid_start.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ra_aid_start/core/: __init__.py  command_builder.py  model_manager.py  preset_manager.py
ra_aid_start/data/: __init__.py  default_models.py
ra_aid_start/models/: __init__.py  model.py  preset.py  validation.py
ra_aid_start/ui/: __init__.py  display.py  menu_system.py  wizards.py
ra_aid_start/utils/: __init__.py  backup_manager.py  file_handler.py  json_handler.py
tests/: __init__.py  test_command_builder.py  test_integration.py  test_model_manager.py  test_preset_manager.py  test_wizards.py
